--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="./logo.svg" />
-    <title>Bun + React</title>
+    <title>🍭 lpop - Secure Environment Variables</title>
+    <meta name="description" content="Securely manage environment variables in your system keychain. Never lose your secrets again." />
     <script type="module" src="./frontend.tsx" async></script>
   </head>
   <body>
