--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="./logo.svg" />
-    <title>🍭 lpop - Secure Environment Variables</title>
-    <meta name="description" content="Securely manage environment variables in your system keychain. Never lose your secrets again." />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍭</text></svg>"
+    />
+    <title>Loggipop - Secure Environment Variables</title>
+    <meta
+      name="description"
+      content="Securely manage environment variables in your system keychain. Never lose your secrets again."
+    />
     <script type="module" src="./frontend.tsx" async></script>
   </head>
   <body>
