--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Loggipop - Secure Environment Variables" />
     <meta property="og:description" content="Securely manage environment variables in your system keychain. Never lose your secrets again." />
     <meta property="og:url" content="https://loggipop.com" />
-    <meta property="og:image" content="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1200 630'><rect width='1200' height='630' fill='%23E8B4F8'/><text x='600' y='350' font-size='200' text-anchor='middle' dominant-baseline='middle'>🍭</text><text x='600' y='500' font-size='48' text-anchor='middle' dominant-baseline='middle' fill='%23333'>Loggipop</text></svg>" />
+    <meta property="og:image" content="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1200 630'><rect width='1200' height='630' fill='%23E8B4F8'/><text x='600' y='315' font-size='300' text-anchor='middle' dominant-baseline='middle'>🍭</text></svg>" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Loggipop - Secure Environment Variables Management" />
@@ -28,7 +28,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Loggipop - Secure Environment Variables" />
     <meta name="twitter:description" content="Securely manage environment variables in your system keychain. Never lose your secrets again." />
-    <meta name="twitter:image" content="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1200 675'><rect width='1200' height='675' fill='%23E8B4F8'/><text x='600' y='375' font-size='200' text-anchor='middle' dominant-baseline='middle'>🍭</text><text x='600' y='525' font-size='48' text-anchor='middle' dominant-baseline='middle' fill='%23333'>Loggipop</text></svg>" />
+    <meta name="twitter:image" content="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1200 675'><rect width='1200' height='675' fill='%23E8B4F8'/><text x='600' y='337' font-size='300' text-anchor='middle' dominant-baseline='middle'>🍭</text></svg>" />
     <meta name="twitter:image:alt" content="Loggipop - Secure Environment Variables Management" />
     
     <!-- Additional Meta Tags -->
